--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Github's default gitignore for Python
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -153,8 +155,10 @@ dmypy.json
 cython_debug/
 
 # PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+# Added this to ignore models downloaded from HF
+model_cache/
+# Ignore finder files
+.DS_Store
+/.DS_Store
