Multiple updates prior to the live event, including Connect Four project

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 python-dotenv
-jupyterlab==4.2.1
+jupyterlab
 ipywidgets
 urllib3
-torch==2.3.0
-transformers==4.41.1
-accelerate==0.30.1
-sentencepiece==0.2.0
-bitsandbytes==0.42.0
-tqdm==4.66.4
+torch
+transformers
+accelerate
+sentencepiece
+bitsandbytes
+tqdm
 openai
-gradio==4.29.0
+gradio
 langchain
 tiktoken
 faiss-cpu
@@ -26,3 +26,4 @@ unstructured
 chromadb
 plotly
 jupyter-dash
+groq
