--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,6 @@
             ]
         }
     },
-    "postCreateCommand": "pip install uv && uv sync",
+    "postCreateCommand": "curl -LsSf https://astral.sh/uv/install.sh | sh && uv sync",
     "remoteUser": "vscode"
 }
