--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Choose the right LLM",
-    "image": "python:3.12-slim-bookworm",
+    "image": "mcr.microsoft.com/devcontainers/python:3.12-bookworm",
     "secrets": {
         "OPENAI_API_KEY": {
             "description": "Your OpenAI API key",
